--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Flexmodel | All-in-one API design platform</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/index.css">
+  <meta charset="UTF-8"/>
+  <title>Flexmodel | All-in-one API design platform</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/favicon.svg"/>
+  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
 <div id="app"></div>
