--- a/public/rapi-doc/index.html
+++ b/public/rapi-doc/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 characters -->
-  <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
+  <script type="module" src="./rapidoc-min.js"></script>
 </head>
 <body>
 <rapi-doc
   spec-url = "/api/docs/openapi.json"
   show-header = 'false'
-  allow-advanced-search='false'
   show-info = 'false'
   allow-server-selection = 'false'
   allow-api-list-style-selection ='false'
