chore: 修改接口路径

--- a/public/graphiql/index.html
+++ b/public/graphiql/index.html
@@ -65,7 +65,7 @@
 <script>
   const root = ReactDOM.createRoot(document.getElementById('graphiql'));
   const fetcher = GraphiQL.createFetcher({
-    url: '/api/graphql',
+    url: '/fm-api/graphql',
     // url: 'https://swapi-graphql.netlify.app/.netlify/functions/index',
     headers: {'X-Example-Header': 'foo'},
   });
