--- a/public/rapi-doc/index.html
+++ b/public/rapi-doc/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <rapi-doc
-  spec-url = "/api/docs/openapi.json"
+  spec-url = "/fm-api/docs/openapi.json"
   show-header = 'false'
   show-info = 'false'
   allow-server-selection = 'false'
