--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Flexmodel | All-in-one API design platform</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/favicon.ico"/>
+  <link rel="icon" href="favicon.ico"/>
   <link rel="stylesheet" href="/index.css">
 </head>
 <body>
