feat(api): 支持多租户API路径动态生成
- 在DebugPanel和EditPanel组件中引入useAppStore以获取当前租户ID
- 动态构建包含租户ID的完整API根路径
- 更新GraphQL API端点显示逻辑以包含租户ID
- 修改Swagger UI和RapiDoc配置以支持租户特定的OpenAPI文档URL
- 调整安全设置页面中的GraphQL端点路径前缀以指示租户占位符
- 统一处理API请求URL构建，确保包含租户上下文

--- a/public/rapi-doc/index.html
+++ b/public/rapi-doc/index.html
@@ -11,19 +11,28 @@
       return theme || 'dark'; // 默认使用 dark 主题
     }
 
-    // 页面加载完成后设置主题
+    // 获取 OpenAPI JSON 的 URL
+    function getOpenApiUrl() {
+      const tenantId = localStorage.getItem('tenantId');
+      if (tenantId) {
+        return `/api/f/docs/${tenantId}/openapi.json`;
+      }
+      return '/api/f/docs/openapi.json';
+    }
+
+    // 页面加载完成后设置主题和 spec-url
     document.addEventListener('DOMContentLoaded', function() {
       const theme = getThemeFromUrl();
       const rapiDoc = document.querySelector('rapi-doc');
       if (rapiDoc) {
         rapiDoc.setAttribute('theme', theme);
+        rapiDoc.setAttribute('spec-url', getOpenApiUrl());
       }
     });
   </script>
 </head>
 <body>
 <rapi-doc
-  spec-url = "/api/f/docs/openapi.json"
   show-header = 'false'
   show-info = 'false'
   allow-server-selection = 'false'
