--- a/public/graphiql/index.html
+++ b/public/graphiql/index.html
@@ -64,7 +64,7 @@
     import {GraphiQL, HISTORY_PLUGIN} from 'graphiql';
     import {createGraphiQLFetcher} from '@graphiql/toolkit';
     import {explorerPlugin} from '@graphiql/plugin-explorer';
-    import 'graphiql/setup-workers/esm.sh';
+    import 'https://esm.sh/graphiql/setup-workers/esm.sh';
 
     const fetcher = createGraphiQLFetcher({
       url: 'https://countries.trevorblades.com',
